references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/RedefinitionDiamond_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:c8c2b09220c6e404b287e90643d545cf469063d382140687104b60766fa44ac2
size 1164
